# TalashAI

./: .gitignore  README.md  api.py  project_architecture.md  project_scope.md  requirements.txt  start-all.bat  start-all.js  start-all.ps1  vercel.json
app/: App.js  app.json  package-lock.json  package.json
app/src/api/: axiosClient.js  notifications.js  socketClient.js
app/src/components/: AudioPlayer.jsx  CaseCard.jsx  CustomButton.jsx  CustomInput.jsx  GenderToggle.jsx  Header.jsx  LanguageModal.jsx  Loader.jsx
app/src/constants/: apiUrls.js  screenNames.js
app/src/i18n/: index.js
app/src/locales/: en.js  ur.js
server/: .gitignore  README.md  package-lock.json  package.json  test_dynamic_questioning.js  test_e2e_workflow.js
server/api/: index.ts
server/src/: app.module.ts  main.ts
talashAgent/: .env  .gitignore  analyze_result.txt  api.py  fix_vertex.py  gemini_client.py  implementation_plan.md  main.py  memory_store.py  package-lock.json  pipeline.py  prompt.txt  pyproject.toml  requirements.txt  talash_memory.db  test_analyze.json  test_e2e.py  test_output.json  test_pipeline.py
talashAgent/agents/: action_planner.py  case_classifier.py  case_listener.py  document_checker.py  misguide_detector.py  pdf_formatter.py  questioning_agent.py  rights_analyzer.py
talashAgent/scratch/: run_test.py  test_embedding.py  test_location.py  test_models.py  test_regions_service_account.py  test_vertex.py  test_vertex_credentials.py  test_vertex_enable.py  test_vertex_env_clear.py
talashAgent/tools/: legal_tools.py  search_legal_docs.py  voice_input.py
(+98 files in other folders)
