[project]
name = "talash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.33.0",
    "google-genai>=1.75.0",
    "pinecone>=9.0.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "speechrecognition>=3.16.1",
]
